# esp-forge

./: .gitignore  .vscodeignore  LICENSE  README.md  esbuild.js  package-lock.json  package.json  tsconfig.json
snippets/: rust.json
src/: extension.ts
src/bootstrap/: healthCheck.ts  installer.ts  platformDetect.ts
src/core/: cargoRunner.ts  debugManager.ts  flashManager.ts  projectManager.ts  serialMonitor.ts  toolchainManager.ts
src/providers/: boardProvider.ts  sidebarProvider.ts  statusBarProvider.ts
src/utils/: defmtDecoder.ts  portScanner.ts  processRunner.ts
src/webviews/componentBrowser/: index.ts  ui.html
src/webviews/newProject/: index.ts  ui.html
src/webviews/serialMonitor/: index.ts  ui.html
src/webviews/setupWizard/: index.ts  ui.html
templates/bare-metal/: Cargo.toml  ferrous32.toml
templates/bare-metal/.cargo/: config.toml
templates/bare-metal/src/: main.rs
templates/embassy-async/: Cargo.toml
templates/embassy-async/.cargo/: config.toml
templates/embassy-async/src/: main.rs
templates/esp-idf-std/: Cargo.toml  sdkconfig.defaults
templates/esp-idf-std/.cargo/: config.toml
templates/esp-idf-std/src/: main.rs
templates/no-std-minimal/: Cargo.toml
templates/no-std-minimal/.cargo/: config.toml
templates/no-std-minimal/src/: main.rs
