[package]
name = "{{project_name}}"
version = "0.1.0"
edition = "2021"

[dependencies]
esp-hal = { version = "0.18", features = ["esp32s3"] }
esp-backtrace = { version = "0.13", features = ["esp32s3", "exception-handler", "panic-handler", "println"] }
esp-println = { version = "0.10", features = ["esp32s3", "log"] }
log = "0.4"

[[bin]]
name = "{{project_name}}"
test = false
bench = false
